# fracture

./: README.md
data/: OpenGL-broccoli_256x256-HD.trn  OpenGL-broccoli_256x256.trn  OpenGL-lena-HD.trn  OpenGL-lena.trn  OpenGL-lena_128x128-HD.trn  OpenGL-lena_128x128.trn  OpenGL-satellite_256x256-HD.trn  OpenGL-satellite_256x256.trn  Python-lena-HD.trn  Python-lena.trn
docs/: CS 81.pptx
src/: CMakeLists.txt  calcSO.frag  errors.c  errors.h  fpimage.h  fpstats.c  fracture.c  glio.c  glio.h  multiplyTiled.frag  paint.frag  searchReduction.frag  square.frag  square.vert  sumReduction.frag  test.frag  zipper.frag
test/: fpimage.py
